--- a/4_NAV_Tabs/package.json
+++ b/4_NAV_Tabs/package.json
@@ -17,7 +17,9 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
